# registrationapi

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 4b61d0043732_init.py  62dea34d2f75_add_table_users.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py
src/schemas/: todo.py  user.py
src/services/: auth.py
