[tool.poetry]
name = "myfastapi2"
version = "0.1.0"
description = ""
authors = ["IVadymMarchenko <topim31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
uvicorn = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
